# social_media_card

./: .pre-commit-config.yaml  .vimrc  .vimspector.json  CHANGELOG.md  README.md  example_create_card.py  pre-commit-config.yaml  pyproject.toml  pyrightconfig.json
.github/workflows/: publish-to-pypi.yml
output_html/: example_image.html
resources/: template.html
social_media_card/: __init__.py  create_card.py  html_template.py  image_manip.py  main.py  paths.py
src/social_media_card/: __init__.py  html_template.py  image_manip.py  paths.py  py.typed
tests/: __init__.py  conftest.py  test_image_manip.py
